# Barrot-Agent

./: .dockerignore  .env.example  .gitignore  .merge-resolution-complete  ABUNDANCE_COGNITION_COMPLETION.md  ABUNDANCE_COGNITION_IMPLEMENTATION.md  ADVANCED_CAPABILITIES_DOCUMENTATION.md  ADVANCED_ENERGY_INGESTION.md  ADVANCED_MONETIZATION_PROTOCOLS.md  ADVANCED_PINGPONG_DATASET_MATRIX.md  AGENT_ARCHITECTURE_DIAGRAM.md  AGENT_CAPABILITY_ABSORPTION.md  AGENT_SPECIALIST_ROLES.md  AGI_DEVELOPMENT.md  AGI_IMPLEMENTATION.md  AGI_IMPLEMENTATION_SUMMARY.md  AGI_PUZZLE_BUNDLE_INTEGRATION.md  AGI_PUZZLE_PROTOCOL.md  AI_AGENTS_ANALYSIS.md  AI_AGENTS_SUMMARY.md  AI_BENCHMARK_EXAM_SYSTEM.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARTICLE_INGESTION_FRAMEWORK.md  AUTONOMOUS_INGESTION_PROTOCOL.md  AUTONOMOUS_OPERATIONS_PROTOCOL.md  B-AGI-2026-01-06T05:06Z  B-AGI-2026-01-06T05:50Z  BARROT_HRM_VARIANTS.md  BARROT_NEXT_ACTIONS_RECOMMENDATION.md  BBR,yml  BBR.yml  BRANCH_QUICK_REFERENCE.md  BUNDLE_v59.3_IMPLEMENTATION.md  CASCADING_PINGPONG_PROTOCOL.md  CHAMELEON_README.md  CHANGELOG.md  CHARACTER_CAPABILITY_SYSTEM.md  CHINESE_JAPANESE_AI_MODELS.md  CLAUDE-SHRM-PINGPONG.md  (+232 more)
.github/: FUNDING.yml  copilot-instructions.md
Barrot-Agent/: alignment_scorer.py  autonomous_ingestion_engine.py  build_manifest.yaml  deduplication_engine.py  ethical_ingestion.py  ingestion_config.yaml  ingestion_metrics.py  knowledge_graph_builder.py  master_ingestion_orchestrator.py  quality_filter.py  query_generator.py  storage_optimizer.py
Barrot-Bundles/: glyph-emission-2026-01-02.yml  maximum-cognition-bundle.yml  readme-canonization-2026-01-03.yml  vΔ61.0-shrm-v2-evolution.md  vΔ61.0-shrm-v2-evolution.yml  vΔ62.0-frontier-ingestion.yml  vΔ62.0-meta-ai-cognition.yml
SHRM-System/: README.md  shrm-config.yaml  shrm-response-log.md
backend/: server.js
barrot/: config.py
barrot_sim/: README.md  __init__.py  agentic_sandbox.py  agi_learning_queue.json  agi_puzzle_pieces.json  civilization_sim.yml  council_echo.py  council_echo_sim.yml  directive_forecast.py  glyph_cascade.py  pingpong_chain_log.md  (+12 more)
(+529 files in other folders)
