[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barrot-millennium-stack"
version = "0.1.0"
description = "A comprehensive framework for tackling the Millennium Prize Problems"
readme = "README_MILLENNIUM.md"
requires-python = ">=3.8"
license = {text = "ISC"}
authors = [
    {name = "Barrot-Agent", email = "barrot@example.com"}
]
keywords = ["mathematics", "millennium-problems", "ai", "theorem-proving", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/Barrot-Agent/Barrot-Agent"
Documentation = "https://github.com/Barrot-Agent/Barrot-Agent/blob/main/README_MILLENNIUM.md"
Repository = "https://github.com/Barrot-Agent/Barrot-Agent"
Issues = "https://github.com/Barrot-Agent/Barrot-Agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["barrot*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
